--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -41,7 +41,7 @@
 
     <!-- Page content -->
     <div class="container-fluid">
-            <h2>{{ course.name }}</h2>
+            <h2>{{ course.name }}alert-success</h2>
             <div class="card-columns-vertical">
                 {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
@@ -50,6 +50,45 @@
                     </div>
                 {% endfor %}
             </div>
+            <div class="container-fluid">
+                <h2>{{ course.name }}</h2>
+                <div class="card-columns-vertical">
+                    {% for lesson in course.lesson_set.all %}
+                        <div class="card mt-1">
+                            <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
+                            <div class="card-body">{{lesson.content}}</div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <br />
+                <br />
+                {% if user.is_authenticated %}
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#exam" aria-expanded="false" aria-controls="exam">Start exam</button>
+                <br />
+                <div id="exam" class="collapse">
+                        <form id="questionform" action="/onlinecourse/{{course.id}}/submit/" method="post">
+                            {% for question in course.question_set.all %}
+                            <div class="card mt-1">
+                                <div class="card-header"><h5>{{question.q_text}}</h5></div>
+                                {% csrf_token %}
+                                <div class="form-group p-2">
+                                    {% for choice in question.choice_set.all %}
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" name="choice_{{choice.id}}"
+                                                   class="form-check-input pl-1" id="{{choice.id}}"
+                                                   value="{{choice.id}}">{{ choice.choice }}
+                                        </label>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            {% endfor %}
+                            <input class="btn btn-success btn-block" type="submit" value="Submit">
+                        </form>
+                </div>
+                {% endif %}
+        
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
