--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,16 +39,36 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       Congratulations, {{ user.first_name }}! You have passed the exam and completed the course with score {{ grade }} / 100
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            <strong>Failed</strong> Sorry, {{ user.first_name }}! You have failed exam with score {{ grade }} / 100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header"><h5>{{question.question_text}}</h5></div>
+                <div class="card-body">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.correct %}
+                            {% if choice in submission.choices.all %}
+                                <div class="text-success">Correct Answer: {{ choice.choice_content }}</div>
+                            {% else %}
+                                <div class="text-warning">Not selected: {{ choice.choice_content }}</div>
+                            {% endif %}
+                        {% else %}
+                            <div>{{ choice.choice_content }}</div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
         </div>
     </div>
 </body>
